<resources>

    <string name="app_name">Visitor\'s book</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="employeeFirstName">Employee first name</string>
    <string name="employeeLastName">Employee last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="officeName">Office name</string>
    <string name="address">Address</string>
    <string name="retype_password">Re-type password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="search">Search</string>

    <string name="cant_be_empty">Field cannot be empty</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="password_length">Password must at least 6 chars</string>
    <string name="authentication_failed">Email and/or password incorrect</string>
    <string name="registration_failed">Registration failed. Reason: </string>
    <string name="newOffice">New Office</string>
    <string name="newOfficeNameError_defined">Office name already defined</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>

    <string name="statistics">Statistics</string>
    <string name="external_registers">External registers</string>
    <string name="change_language">Change language</string>
    <string name="profile_information">Profile information</string>
    <string name="import_rooms_csv">Import rooms CSV</string>
    <string name="import_employees_csv">Import employees CSV</string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="logout">Log out</string>
    <string name="logoutQuestion">Are you sure you wish to log out? This will terminate your current session</string>
    <string name="notAvailable">N/A</string>

    <string name="checkIn">Check in</string>
    <string name="checkOut">Check out</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="deleteVisitMessage">Are you sure you want to remove this visit?</string>

    <string name="before">Before:</string>
    <string name="after">After:</string>
    <string name="applyFilter">Apply filter</string>

    <string name="visits">Visits</string>
    <string name="employees">Employees</string>
    <string name="rooms">Rooms</string>
    <string name="room">Room</string>
    <string name="Room">Room:</string>
    <string name="floor">Floor:</string>

    <string name="takePhotoFragmentTitle">Take photo</string>
    <string name="enter_manually">Enter manually</string>
    <string name="checkInVisitor">Check in visitor</string>
    <string name="addVisitor">Add visitor</string>
    <string name="fullVisit">Fast check in</string>
    <string name="scanIncorrect">Scan incorrect</string>
    <string name="chooseInputMethods">Choose input method</string>

    <string-array name="ocrOptions">
        <item>Romanian ID card</item>
        <item>Driver license</item>
        <item>German ID card</item>
    </string-array>

    <string name="takePhoto">Scan your \nvisitor\'s ID</string>
    <string name="visitorIdPhotoPreview">Visitor\nID photo preview</string>

    <string name="visitAndVisitorDetails">Visit and visitor details</string>
    <string name="placeholderGivenName">Name (given name)</string>
    <string name="placeholderGivenSurname">Surname (given name)</string>
    <string name="placeholderVisitStarts">Visit starts</string>
    <string name="placeholderVisitEnds">Visit ends</string>
    <string name="placeholderSelectARoom">Select a room</string>
    <string name="electronicSignature">Electronic signature</string>
    <string name="printBadge">Print badge</string>
    <string name="finish">Finish</string>
    <string name="addParticipant">Add participant</string>
    <string name="participantsErrorMessage">You need to select at least one participant</string>
    <string name="otherParticipants">Other participants</string>
    
    <string name="roomSize">Room size (for how many people)</string>
    <string name="Floor">Floor</string>
    <string name="anyFloor">Any floor</string>
    <string name="Utilities">Utilities</string>
    <string name="searchRoom">Search for an available room</string>
    <integer-array name="floorSizeOptions">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>10</item>
        <item>16</item>
    </integer-array>

    <string name="enterSignature">Enter signature</string>
    <string name="signHerePlaceholder">Please enter your signature below</string>
    <string name="signHere">Sign here</string>

    <string name="viewVisit">View visit</string>
    <string name="name">Name:</string>
    <string name="cnp">CNP:</string>
    <string name="idSerialNumber">ID Serial Number:</string>
    <string name="visitorDetails">Visitor details</string>
    <string name="visitDetails">Visit details</string>
    <string name="checkinTime">Check-in time:</string>
    <string name="checkoutTime">Check-out time:</string>
    <string name="attendingPersonnel">Attending personnel</string>
    <string name="exportPDF">Export PDF</string>


    <string name="title_activity_test">TestActivity</string>

    <string-array name="languages">
        <item>English</item>
        <item>Română</item>
    </string-array>
    
    <string name="selectLanguage_default">Select language</string>
    <string name="selectLanguage_other">Selectați limba</string>

</resources>
