<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <include layout="@layout/component_photo_placeholder" />

            <TextView
                style="@style/headerList"
                android:layout_width="match_parent"
                android:text="@string/visitorDetails"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txtName"
                style="@style/viewData_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/txtCNP"
                style="@style/viewData_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cnp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/txtIdSerialNumber"
                style="@style/viewData_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idSerialNumber"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                style="@style/headerList"
                android:layout_width="match_parent"
                android:text="@string/visitDetails"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txtCheckinTime"
                style="@style/viewData_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkinTime"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/txtCheckoutTime"
                style="@style/viewData_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkoutTime"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                style="@style/headerList"
                android:layout_width="match_parent"
                android:text="@string/room"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/txtRoom"
                style="@style/viewData_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                style="@style/headerList"
                android:layout_width="match_parent"
                android:text="@string/attendingPersonnel"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <LinearLayout
                android:id="@+id/viewParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnExport"
            android:layout_width="match_parent"
            style="@style/buttonGradient"
            android:text="@string/exportPDF"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="bottom"
            />

    </LinearLayout>

</ScrollView>