<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/gradientStart"-->
            <!--android:textColorHint="@color/gradientEnd">-->

            <EditText
                android:id="@+id/txtUsername"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:inputType="text"
                android:imeOptions="actionNext"
                />

        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColorHint="@color/gradientEnd">-->

            <EditText
                android:id="@+id/txtPassword"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeOptions="actionGo"
                />

        <!--</android.support.design.widget.TextInputLayout>-->
        
        <Button
            android:id="@+id/btnSignIn"
            style="@style/buttonGradient"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/sign_in"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/activity_vertical_marginHalf">

            <Button
                android:id="@+id/btnCreateAccount"
                style="@style/buttonStroke"
                android:layout_width="match_parent"
                android:text="@string/create_account"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/activity_horizontal_marginHalf"/>

            <Button
                android:id="@+id/btnForgotPassword"
                style="@style/buttonStroke"
                android:layout_width="match_parent"
                android:text="@string/forgot_password"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_horizontal_marginHalf"/>

        </LinearLayout>

    </LinearLayout>
    
    <Button
        android:id="@+id/btnTermsConditions"
        style="@style/buttonNoBackground"
        android:layout_width="wrap_content"
        android:text="@string/terms_conditions"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
