<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/viewContentBadge"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="match_parent"
                android:layout_height="180dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayoutStyle">

                    <EditText
                        android:id="@+id/lblName"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Name"
                        android:hint="@string/placeholderGivenName"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayoutStyle"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/lblSurname"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Surname"
                        android:hint="@string/placeholderGivenSurname"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnPrintBadge"
            android:layout_width="match_parent"
            style="@style/buttonStroke"
            android:text="@string/printBadge"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="bottom"
            />

    </LinearLayout>
</RelativeLayout>